--- a/cvpcb/CMakeLists.txt
+++ b/cvpcb/CMakeLists.txt
@@ -37,7 +37,7 @@ set( CVPCB_SRCS
     ../common/base_units.cpp
     ../pcbnew/board_items_to_polygon_shape_transform.cpp
     ../pcbnew/pcb_general_settings.cpp
-    ../pcbnew/class_drc_item.cpp
+    ../pcbnew/drc_item.cpp
     auto_associate.cpp
     cfg.cpp
     components_listbox.cpp
