--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -353,6 +353,7 @@ set( COMMON_SRCS
     geometry/seg.cpp
     geometry/shape.cpp
     geometry/shape_collisions.cpp
+    geometry/shape_arc.cpp
     geometry/shape_file_io.cpp
     geometry/shape_line_chain.cpp
     geometry/shape_poly_set.cpp
