--- a/kicad/CMakeLists.txt
+++ b/kicad/CMakeLists.txt
@@ -14,12 +14,11 @@ include_directories(
 
 
 set( KICAD_SRCS
-    class_treeprojectfiles.cpp
-    class_treeproject_item.cpp
     commandframe.cpp
     dialogs/dialog_template_selector_base.cpp
     dialogs/dialog_template_selector.cpp
     files-io.cpp
+    import_project.cpp
     kicad.cpp
     mainframe.cpp
     menubar.cpp
@@ -27,7 +26,8 @@ set( KICAD_SRCS
     prjconfig.cpp
     project_template.cpp
     tree_project_frame.cpp
-    import_project.cpp
+    treeprojectfiles.cpp
+    treeproject_item.cpp
     )
 
 if( MINGW )
