pcbnew: add align center and align middle tools and related icons
NEW: add placement tools that allow aligning the centers of items in a selection, both vertically and horizonally

--- a/bitmaps_png/CMakeLists.txt
+++ b/bitmaps_png/CMakeLists.txt
@@ -138,6 +138,8 @@ set( BMAPS_MID
     add_zone_cutout
     add_zone
     align_items
+    align_items_center
+    align_items_middle
     anchor
     annotate_down_right
     annotate_right_down
