pcbnew: add and use new icons for align left, right, top & bottom
NEW: add new align icons based on the existing align_items.svg icon, just flipped and rotated
CHANGED: change the context menu to use the new align icons

--- a/bitmaps_png/CMakeLists.txt
+++ b/bitmaps_png/CMakeLists.txt
@@ -138,6 +138,10 @@ set( BMAPS_MID
     add_zone_cutout
     add_zone
     align_items
+    align_items_left
+    align_items_right
+    align_items_top
+    align_items_bottom
     align_items_center
     align_items_middle
     anchor
