Circle to polygon conversion: a few enhancements: * Remove duplicate code * fix incorrect formulas is some places * add comments

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -350,6 +350,7 @@ set( COMMON_SRCS
     tool/zoom_tool.cpp
 
     geometry/convex_hull.cpp
+    geometry/geometry_utils.cpp
     geometry/seg.cpp
     geometry/shape.cpp
     geometry/shape_collisions.cpp
