Add WX_TEXT_ENTRY_DIALOG which inherits from DIALOG_SHIM.
Fixes: lp:1754977
* https://bugs.launchpad.net/kicad/+bug/1754977

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -163,6 +163,8 @@ set( COMMON_DLG_SRCS
     dialogs/dialog_image_editor_base.cpp
     dialogs/dialog_list_selector_base.cpp
     dialogs/dialog_page_settings_base.cpp
+    dialogs/dialog_text_entry_base.cpp
+    dialogs/dialog_text_entry.cpp
     dialogs/wx_html_report_panel.cpp
     dialogs/wx_html_report_panel_base.cpp
     )
