In-place editing for footprint TEXTE_MODULEs.
Fixes: lp:1102168
* https://bugs.launchpad.net/kicad/+bug/1102168

Fixes: lp:1779913
* https://bugs.launchpad.net/kicad/+bug/1779913

(cherry picked from commit 83781ab)

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -178,6 +178,7 @@ set( COMMON_WIDGET_SRCS
     widgets/footprint_preview_widget.cpp
     widgets/footprint_select_widget.cpp
     widgets/gal_options_panel.cpp
+    widgets/grid_combobox.cpp
     widgets/grid_icon_text_helpers.cpp
     widgets/indicator_icon.cpp
     widgets/mathplot.cpp
