Cosmetic enhancement: Add missing icons in GAL Select submenu (context submenu).

--- a/bitmaps_png/CMakeLists.txt
+++ b/bitmaps_png/CMakeLists.txt
@@ -412,6 +412,7 @@ set( BMAPS_MID
     options_all_vias
     options_arc
     options_circle
+    options_generic
     options_module
     options_pad
     options_pinsheet
