--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -13,6 +13,8 @@ include_directories(
     ${GLEW_INCLUDE_DIR}
     ${GLM_INCLUDE_DIR}
     ${CURL_INCLUDE_DIRS}
+    ${OCE_INCLUDE_DIRS}
+    ${OCC_INCLUDE_DIR}
     ../3d-viewer
     ../pcbnew
     ../polygon
