DXF import: add import of DXF splines that are converted to Bezier curves.
Fix also a lot of bugs related to Bezier curves (S_CURVE shape in DRAW_SEGMENT class) in Pcbnew code.
Add missing code to handle these Bezier curves

--- a/pcbnew/CMakeLists.txt
+++ b/pcbnew/CMakeLists.txt
@@ -42,7 +42,7 @@ include_directories(
     ../polygon
     ../common/dialogs
     ./exporters
-    ../lib_dxf
+    ../dxflib_qcad
     ./import_dxf
     ../utils/idftools
     ${GLM_INCLUDE_DIR}
