--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -941,7 +941,7 @@ add_subdirectory( 3d-viewer )
 add_subdirectory( cvpcb )
 add_subdirectory( eeschema )
 add_subdirectory( gerbview )
-add_subdirectory( lib_dxf )
+add_subdirectory( dxflib_qcad )
 add_subdirectory( pcbnew )
 add_subdirectory( polygon )
 add_subdirectory( pagelayout_editor )
