--- a/utils/idftools/CMakeLists.txt
+++ b/utils/idftools/CMakeLists.txt
@@ -26,10 +26,10 @@ add_library( idf3 STATIC ${IDF3_FILES} )
 
 add_executable( idfcyl idf_cylinder.cpp )
 add_executable( idfrect idf_rect.cpp )
-add_executable( dxf2idf dxf2idfmain.cpp dxf2idf.cpp )
+#add_executable( dxf2idf dxf2idfmain.cpp dxf2idf.cpp )
 add_executable( idf2vrml idf2vrml.cpp )
 
-target_link_libraries( dxf2idf lib_dxf idf3 ${wxWidgets_LIBRARIES} )
+#target_link_libraries( dxf2idf lib_dxf idf3 ${wxWidgets_LIBRARIES} )
 
 target_link_libraries( idf2vrml idf3 common ${OPENGL_LIBRARIES} ${wxWidgets_LIBRARIES} )
 
@@ -39,7 +39,8 @@ if( APPLE )
         RUNTIME_OUTPUT_DIRECTORY ${OSX_BUNDLE_BUILD_BIN_DIR}
         )
 else()
-    install( TARGETS idfcyl idfrect dxf2idf idf2vrml
+    install( TARGETS idfcyl idfrect idf2vrml
+        #dxf2idf
         DESTINATION ${KICAD_BIN}
         COMPONENT binary )
 endif()
