replace lib_dxf by dxflib from qcad in dxf2idf code

--- a/utils/idftools/CMakeLists.txt
+++ b/utils/idftools/CMakeLists.txt
@@ -1,6 +1,6 @@
 include_directories(
     "${CMAKE_SOURCE_DIR}/include"
-    "${CMAKE_SOURCE_DIR}/lib_dxf"
+    "${CMAKE_SOURCE_DIR}/dxflib_qcad"
     "${CMAKE_SOURCE_DIR}/utils/idftools"
     ${OPENGL_INCLUDE_DIR}
     ${Boost_INCLUDE_DIR}
@@ -26,10 +26,10 @@ add_library( idf3 STATIC ${IDF3_FILES} )
 
 add_executable( idfcyl idf_cylinder.cpp )
 add_executable( idfrect idf_rect.cpp )
-#add_executable( dxf2idf dxf2idfmain.cpp dxf2idf.cpp )
+add_executable( dxf2idf dxf2idfmain.cpp dxf2idf.cpp )
 add_executable( idf2vrml idf2vrml.cpp )
 
-#target_link_libraries( dxf2idf lib_dxf idf3 ${wxWidgets_LIBRARIES} )
+target_link_libraries( dxf2idf lib_dxf idf3 ${wxWidgets_LIBRARIES} )
 
 target_link_libraries( idf2vrml idf3 common ${OPENGL_LIBRARIES} ${wxWidgets_LIBRARIES} )
 
@@ -40,7 +40,7 @@ if( APPLE )
         )
 else()
     install( TARGETS idfcyl idfrect idf2vrml
-        #dxf2idf
+        dxf2idf
         DESTINATION ${KICAD_BIN}
         COMPONENT binary )
 endif()
