New net membership controls for more efficient operation.
(cherry picked from commit f7c5a54)

--- a/pcbnew/CMakeLists.txt
+++ b/pcbnew/CMakeLists.txt
@@ -169,6 +169,8 @@ set( PCBNEW_DIALOGS
     dialogs/panel_setup_netclasses_base.cpp
     dialogs/panel_setup_text_and_graphics.cpp
     dialogs/panel_setup_text_and_graphics_base.cpp
+    dialogs/panel_setup_tracks_and_vias.cpp
+    dialogs/panel_setup_tracks_and_vias_base.cpp
     footprint_wizard.cpp
     footprint_wizard_frame.cpp
     footprint_wizard_frame_functions.cpp
