--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -156,6 +156,7 @@ set( COMMON_DLG_SRCS
     dialogs/dialog_configure_paths.cpp
     dialogs/dialog_configure_paths_base.cpp
     dialogs/dialog_display_info_HTML_base.cpp
+    dialogs/dialog_edit_library_tables.cpp
     dialogs/dialog_exit_base.cpp
     dialogs/dialog_file_dir_picker.cpp
     dialogs/dialog_image_editor.cpp
