--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -183,6 +183,7 @@ set( COMMON_WIDGET_SRCS
     widgets/gal_options_panel.cpp
     widgets/grid_combobox.cpp
     widgets/grid_icon_text_helpers.cpp
+    widgets/grid_text_button_helpers.cpp
     widgets/indicator_icon.cpp
     widgets/mathplot.cpp
     widgets/paged_dialog.cpp
